--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,34 @@
 *{
   box-sizing: border-box;
 }
+h1{
+font-size: 30px;
+border:2px dashed black;
+border-radius: 20px;
+width:20%;
+margin: auto;
+margin-bottom: 40px;
+}
+img{
+  height:100px;
+  width:10%;
+}
 button{
   color:blue;
   margin-bottom: 15px;
-  margin: 0 auto;
+  margin: auto;
   font-size: 20px;
+  margin-left: 5%;
+  width:5%;
+  border:2px dashed black;
+  height: 50px;
+  border-radius: 50px;
+  /* text-align: center; */
+  background-image: url("css/quarterhead.jpg");
 }
 body{
   text-align: center;
-  background-image: url('/quarterhead.jpg');
+  background-image: url('/css/quarterhead.jpg');
 }
 section{
   font-size: 30px;
